Kube-Labels.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-lable
  labels:
    env: prod
    app: nginx
spec:
  containers:
  -  image: nginx
     name: democontainer
     ports:
       - containerPort: 80
