Multi-containerpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
spec:
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: Never
    resources:
      requests:
        cpu: 100m
     image: busybox
     imagePullPolicy: Never
     resources:
       requests:
         cpu: 100m
      command:
        - sleep
        - "3600"
