command.yaml
apiVersion: v1
kind: Pod
metadata:
  name: command2
spec:
  containers:
  - name: cont2
    image: busybox
    command: ["sleep","$echo"]
    args: ["3600"]
