deployments-rollout.yaml
#When we use Deployments??
#Whenever there is a need of crating the multiple pods along with rolling back the changes. test
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kplabs-deployment-rollout
spec:
  replicas: 5
  selector:
    matchLabels:
      tier: frontend
  template:
    metadata:
      labels:
        tier: frontend
    spec:
      containers:
      - name: nginx-cont1
        image: nginx:1.18.0
