pv.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp
spec:
  containers:
    - name: webapp
      image: kodekloud/event-simulator
      volumeMounts:
      - mountPath: "/log"
        name: mypd
  volumes:
  - name: myvol
    hostPath:
      path:  /var/log/webapp
      type: Directory
